--- a/examples/music_speech_classification/code.ipynb
+++ b/examples/music_speech_classification/code.ipynb
@@ -103,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "Overall\n",
-      "---------------------\n",
+      "########################################################################################\n",
       "\n",
       "Precision:             76.63\n",
       "Recall:                73.64\n",
@@ -114,18 +114,49 @@
       "D (deletions):          8.30\n",
       "I (insertions):         1.70\n",
       "\n",
+      "Ground-Truth\n",
+      "----------------------------\n",
+      "Count:                     7\n",
+      "Length - Min:          10.20\n",
+      "Length - Max:          52.10\n",
+      "Length - Mean:         24.23\n",
+      "Length - Median:       18.30\n",
+      "Length - Variance:    207.69\n",
+      "\n",
+      "\n",
+      "System Output\n",
+      "----------------------------\n",
+      "Count:                    17\n",
+      "Length - Min:           1.90\n",
+      "Length - Max:          22.20\n",
+      "Length - Mean:          9.59\n",
+      "Length - Median:        7.30\n",
+      "Length - Variance:     36.16\n",
+      "\n",
       "Classes\n",
-      "---------------------\n",
+      "########################################################################################\n",
       "\n",
       "\n",
-      "music            Precision: 69.86  Recall: 74.03\n",
+      "music            Precision: 69.86,  Recall: 74.03\n",
       "                 N:  62.00, C:  45.90, S:  12.90, D:   3.20, I:   0.00\n",
       "\n",
-      "speech           Precision: 87.97  Recall: 76.15\n",
+      "            REF  L-Min:   10.20, L-Max:   39.60, L-Mean:   20.67, L-Median:   12.20, L-Var:  179.90\n",
+      "            HYP  L-Min:    2.40, L-Max:   16.20, L-Mean:    8.21, L-Median:    6.90, L-Var:   21.35\n",
+      "\n",
+      "\n",
+      "speech           Precision: 87.97,  Recall: 76.15\n",
       "                 N:  89.30, C:  68.00, S:  16.20, D:   5.10, I:   1.70\n",
       "\n",
-      "mix              Precision: 55.00  Recall: 60.11\n",
+      "            REF  L-Min:   18.00, L-Max:   52.10, L-Mean:   29.77, L-Median:   19.20, L-Var:  249.63\n",
+      "            HYP  L-Min:    1.90, L-Max:   22.20, L-Mean:   12.88, L-Median:   13.90, L-Var:   51.42\n",
+      "\n",
+      "\n",
+      "mix              Precision: 55.00,  Recall: 60.11\n",
       "                 N:  18.30, C:  11.00, S:   7.30, D:   0.00, I:   0.00\n",
+      "\n",
+      "            REF  L-Min:   18.30, L-Max:   18.30, L-Mean:   18.30, L-Median:   18.30, L-Var:    0.00\n",
+      "            HYP  L-Min:    3.70, L-Max:   11.00, L-Mean:    6.67, L-Median:    5.30, L-Var:    9.82\n",
+      "\n",
       "\n"
      ]
     }
