Update KWS example

--- a/examples/keyword_spotting/code.ipynb
+++ b/examples/keyword_spotting/code.ipynb
@@ -104,6 +104,11 @@
       "Overall\n",
       "---------------------\n",
       "\n",
+      "TWV:                  -12.98\n",
+      "\n",
+      "FRR:                    0.29\n",
+      "FAR:                    0.01\n",
+      "\n",
       "Precision:             62.96\n",
       "Recall:                70.83\n",
       "\n",
@@ -113,7 +118,7 @@
       "D (deletions):          3.00\n",
       "I (insertions):         6.00\n",
       "\n",
-      "Classes\n",
+      "Keywords\n",
       "---------------------\n",
       "\n",
       "\n",
@@ -162,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
