--- a/examples/automatic_speech_recognition/code.ipynb
+++ b/examples/automatic_speech_recognition/code.ipynb
@@ -58,11 +58,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "001-a - how about evaluate\n",
-      "001-b - whats this\n",
-      "002-a - where is the\n",
-      "003-a - is the boss\n",
-      "003-b - take up the one from the top\n",
+      "001-a - hoalw aboadsfut evaluate\n",
+      "001-b - whats tho\n",
+      "002-a - where is tho\n",
+      "003-a - is tho boss\n",
+      "003-b - take up tho one from tho top\n",
       "003-c - bottom is below top\n"
      ]
     }
@@ -97,11 +97,11 @@
       "Overall\n",
       "###########################################################################################################\n",
       "\n",
-      "Error Rate :           21.74 %\n",
+      "Error Rate :           47.83 %\n",
       "\n",
       "N (total):                23\n",
-      "C (correct):              19\n",
-      "S (substitutions):         2\n",
+      "C (correct):              13\n",
+      "S (substitutions):         8\n",
       "D (deletions):             2\n",
       "I (insertions):            1\n",
       "\n",
@@ -110,23 +110,26 @@
       "###########################################################################################################\n",
       "\n",
       "\n",
-      "about            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
+      "aboadsfut        N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   0.00\n",
+      "about            N:   1.00, C:   0.00, S:   1.00, D:   0.00, I:   0.00\n",
       "below            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
       "boss             N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
       "bottom           N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
       "evalmate         N:   1.00, C:   0.00, S:   1.00, D:   0.00, I:   0.00\n",
       "evaluate         N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   0.00\n",
       "from             N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "how              N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
+      "hoalw            N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   0.00\n",
+      "how              N:   1.00, C:   0.00, S:   1.00, D:   0.00, I:   0.00\n",
       "is               N:   3.00, C:   3.00, S:   0.00, D:   0.00, I:   0.00\n",
       "one              N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
       "store            N:   1.00, C:   0.00, S:   0.00, D:   1.00, I:   0.00\n",
       "take             N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
       "that             N:   1.00, C:   0.00, S:   1.00, D:   0.00, I:   0.00\n",
-      "the              N:   4.00, C:   4.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "this             N:   1.00, C:   0.00, S:   0.00, D:   1.00, I:   0.00\n",
+      "the              N:   4.00, C:   0.00, S:   3.00, D:   1.00, I:   0.00\n",
+      "this             N:   1.00, C:   0.00, S:   1.00, D:   0.00, I:   0.00\n",
+      "tho              N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   1.00\n",
       "top              N:   2.00, C:   2.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "up               N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   1.00\n",
+      "up               N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   0.00\n",
       "whats            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
       "where            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
       "\n",
@@ -136,23 +139,23 @@
       "\n",
       "001-a :\n",
       "        ['how', 'about', 'evalmate']\n",
-      "        ['how', 'about', 'evaluate']\n",
+      "        ['hoalw', 'aboadsfut', 'evaluate']\n",
       "\n",
       "001-b :\n",
       "        ['whats', 'that']\n",
-      "        ['whats', 'this']\n",
+      "        ['whats', 'tho']\n",
       "\n",
       "002-a :\n",
       "        ['where', 'is', 'the', 'store']\n",
-      "        ['where', 'is', 'the', None]\n",
+      "        ['where', 'is', 'tho', None]\n",
       "\n",
       "003-a :\n",
       "        ['is', 'this', 'the', 'boss']\n",
-      "        ['is', None, 'the', 'boss']\n",
+      "        ['is', 'tho', None, 'boss']\n",
       "\n",
       "003-b :\n",
-      "        ['take', None, 'the', 'one', 'from', 'the', 'top']\n",
-      "        ['take', 'up', 'the', 'one', 'from', 'the', 'top']\n",
+      "        ['take', 'the', None, 'one', 'from', 'the', 'top']\n",
+      "        ['take', 'up', 'tho', 'one', 'from', 'tho', 'top']\n",
       "\n",
       "003-c :\n",
       "        ['bottom', 'is', 'below', 'top']\n",
@@ -168,6 +171,64 @@
     "result.write_report('out.txt', template='asr_detail')\n",
     "\n",
     "with open('out.txt', 'r') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing a confusion report."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "about          \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "               aboadsfut :   1\n",
+      "\n",
+      "evalmate       \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                evaluate :   1\n",
+      "\n",
+      "how            \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                   hoalw :   1\n",
+      "\n",
+      "that           \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                     tho :   1\n",
+      "\n",
+      "the            \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                     tho :   2\n",
+      "                      up :   1\n",
+      "\n",
+      "this           \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                     tho :   1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result.write_report('out_conf.txt', template='asr_confusion')\n",
+    "\n",
+    "with open('out_conf.txt', 'r') as f:\n",
     "    print(f.read())"
    ]
   }
