--- a/examples/keyword_spotting/code.ipynb
+++ b/examples/keyword_spotting/code.ipynb
@@ -102,7 +102,7 @@
      "output_type": "stream",
      "text": [
       "Overall\n",
-      "---------------------\n",
+      "###########################################################################################################\n",
       "\n",
       "TWV:                  -12.98\n",
       "\n",
@@ -119,7 +119,7 @@
       "I (insertions):         6.00\n",
       "\n",
       "Keywords\n",
-      "---------------------\n",
+      "###########################################################################################################\n",
       "\n",
       "\n",
       "one              Precision: 100.00  Recall: 71.43\n",
@@ -141,9 +141,9 @@
     }
    ],
    "source": [
-    "from evalmate import tasks\n",
+    "import evalmate\n",
     "\n",
-    "result = tasks.KWSEvaluator().evaluate(ref_corpus, hyps)\n",
+    "result = evalmate.KWSEvaluator().evaluate(ref_corpus, hyps)\n",
     "result.write_report('out.txt')\n",
     "\n",
     "with open('out.txt', 'r') as f:\n",
