--- a/examples/music_speech_classification/code.ipynb
+++ b/examples/music_speech_classification/code.ipynb
@@ -103,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "Overall\n",
-      "########################################################################################\n",
+      "###########################################################################################################\n",
       "\n",
       "Precision:             76.63\n",
       "Recall:                73.64\n",
@@ -134,7 +134,14 @@
       "Length - Variance:     36.16\n",
       "\n",
       "Classes\n",
-      "########################################################################################\n",
+      "###########################################################################################################\n",
+      "\n",
+      "\n",
+      "mix              Precision: 55.00,  Recall: 60.11\n",
+      "                 N:  18.30, C:  11.00, S:   7.30, D:   0.00, I:   0.00\n",
+      "\n",
+      "            REF  L-Min:   18.30, L-Max:   18.30, L-Mean:   18.30, L-Median:   18.30, L-Var:    0.00\n",
+      "            HYP  L-Min:    3.70, L-Max:   11.00, L-Mean:    6.67, L-Median:    5.30, L-Var:    9.82\n",
       "\n",
       "\n",
       "music            Precision: 69.86,  Recall: 74.03\n",
@@ -150,21 +157,14 @@
       "            REF  L-Min:   18.00, L-Max:   52.10, L-Mean:   29.77, L-Median:   19.20, L-Var:  249.63\n",
       "            HYP  L-Min:    1.90, L-Max:   22.20, L-Mean:   12.88, L-Median:   13.90, L-Var:   51.42\n",
       "\n",
-      "\n",
-      "mix              Precision: 55.00,  Recall: 60.11\n",
-      "                 N:  18.30, C:  11.00, S:   7.30, D:   0.00, I:   0.00\n",
-      "\n",
-      "            REF  L-Min:   18.30, L-Max:   18.30, L-Mean:   18.30, L-Median:   18.30, L-Var:    0.00\n",
-      "            HYP  L-Min:    3.70, L-Max:   11.00, L-Mean:    6.67, L-Median:    5.30, L-Var:    9.82\n",
-      "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from evalmate import tasks\n",
+    "import evalmate\n",
     "\n",
-    "result = tasks.ClassificationEvaluator().evaluate(ref_corpus, hyps)\n",
+    "result = evalmate.SegmentEvaluator().evaluate(ref_corpus, hyps)\n",
     "result.write_report('out.txt')\n",
     "\n",
     "with open('out.txt', 'r') as f:\n",
@@ -188,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
