Add separate method to return report as string

--- a/examples/automatic_speech_recognition/code.ipynb
+++ b/examples/automatic_speech_recognition/code.ipynb
@@ -167,10 +167,8 @@
     "import evalmate\n",
     "\n",
     "result = evalmate.ASREvaluator().evaluate(ref_corpus, hyps)\n",
-    "result.write_report('out.txt', template='asr_detail')\n",
     "\n",
-    "with open('out.txt', 'r') as f:\n",
-    "    print(f.read())"
+    "print(result.get_report(template='asr_detail'))"
    ]
   },
   {
@@ -204,10 +202,7 @@
     }
    ],
    "source": [
-    "result.write_report('out_conf.txt', template='asr_confusion')\n",
-    "\n",
-    "with open('out_conf.txt', 'r') as f:\n",
-    "    print(f.read())"
+    "print(result.get_report(template='asr_confusion'))"
    ]
   }
  ],
