Update reports (fixes #5, fixes #6, fixes #7)

--- a/examples/keyword_spotting/code.ipynb
+++ b/examples/keyword_spotting/code.ipynb
@@ -96,6 +96,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import evalmate\n",
+    "\n",
+    "result = evalmate.KWSEvaluator().evaluate(ref_corpus, hyps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -104,50 +115,127 @@
       "Overall\n",
       "###########################################################################################################\n",
       "\n",
-      "TWV:                  -12.98\n",
+      "TWV:                  -12.979\n",
       "\n",
-      "FRR:                    0.29\n",
-      "FAR:                    0.01\n",
+      "FRR:                    0.290\n",
+      "FAR:                    0.014\n",
       "\n",
-      "Precision:             62.96\n",
-      "Recall:                70.83\n",
+      "Precision:             62.963 %\n",
+      "Recall:                70.833 %\n",
       "\n",
-      "N (total):             24.00\n",
-      "C (correct):           17.00\n",
-      "S (substitutions):      4.00\n",
-      "D (deletions):          3.00\n",
-      "I (insertions):         6.00\n",
+      "Precision (mean):      65.238 %\n",
+      "Recall (mean):         70.952 %\n",
+      "\n",
+      "N (total):                 24\n",
+      "C (correct):               17\n",
+      "S (substitutions):          4\n",
+      "D (deletions):              3\n",
+      "I (insertions):             6\n",
       "\n",
       "Keywords\n",
       "###########################################################################################################\n",
       "\n",
       "\n",
-      "one              Precision: 100.00  Recall: 71.43\n",
-      "                 N:   7.00, C:   5.00, S:   1.00, D:   1.00, I:   0.00\n",
+      "five             Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.007\n",
+      "                 N:      3,  C:      2,  S:      0,  D:      1,  I:      1\n",
       "\n",
-      "two              Precision: 42.86  Recall: 75.00\n",
-      "                 N:   4.00, C:   3.00, S:   1.00, D:   0.00, I:   2.00\n",
+      "four             Precision: 50.00 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.020\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n",
-      "three            Precision: 66.67  Recall: 66.67\n",
-      "                 N:   6.00, C:   4.00, S:   1.00, D:   1.00, I:   1.00\n",
+      "one              Precision: 100.00 %   Recall: 71.43 %   FRR: 0.286   FAR: 0.000\n",
+      "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      0\n",
       "\n",
-      "five             Precision: 66.67  Recall: 66.67\n",
-      "                 N:   3.00, C:   2.00, S:   0.00, D:   1.00, I:   1.00\n",
+      "three            Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.014\n",
+      "                 N:      6,  C:      4,  S:      1,  D:      1,  I:      1\n",
       "\n",
-      "four             Precision: 50.00  Recall: 75.00\n",
-      "                 N:   4.00, C:   3.00, S:   1.00, D:   0.00, I:   2.00\n",
+      "two              Precision: 42.86 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.027\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import evalmate\n",
-    "\n",
-    "result = evalmate.KWSEvaluator().evaluate(ref_corpus, hyps)\n",
-    "result.write_report('out.txt')\n",
-    "\n",
-    "with open('out.txt', 'r') as f:\n",
-    "    print(f.read())"
+    "print(result.get_report('kws'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall\n",
+      "###########################################################################################################\n",
+      "\n",
+      "TWV:                  -12.979\n",
+      "\n",
+      "FRR:                    0.290\n",
+      "FAR:                    0.014\n",
+      "\n",
+      "Precision:             62.963 %\n",
+      "Recall:                70.833 %\n",
+      "\n",
+      "Precision (mean):      65.238 %\n",
+      "Recall (mean):         70.952 %\n",
+      "\n",
+      "N (total):                 24\n",
+      "C (correct):               17\n",
+      "S (substitutions):          4\n",
+      "D (deletions):              3\n",
+      "I (insertions):             6\n",
+      "\n",
+      "Keywords\n",
+      "###########################################################################################################\n",
+      "\n",
+      "\n",
+      "five             Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.007\n",
+      "                 N:      3,  C:      2,  S:      0,  D:      1,  I:      1\n",
+      "\n",
+      "four             Precision: 50.00 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.020\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "\n",
+      "one              Precision: 100.00 %   Recall: 71.43 %   FRR: 0.286   FAR: 0.000\n",
+      "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      0\n",
+      "\n",
+      "three            Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.014\n",
+      "                 N:      6,  C:      4,  S:      1,  D:      1,  I:      1\n",
+      "\n",
+      "two              Precision: 42.86 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.027\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "\n",
+      "\n",
+      "Confusions\n",
+      "###########################################################################################################\n",
+      "\n",
+      "\n",
+      "four           \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                     two :   1\n",
+      "\n",
+      "one            \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                     two :   1\n",
+      "\n",
+      "three          \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                    four :   1\n",
+      "\n",
+      "two            \n",
+      "-----------------------------------------------------------------------------------------------------------\n",
+      "\n",
+      "                   three :   1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.get_report('kws_detail'))"
    ]
   }
  ],
@@ -167,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
