--- a/examples/automatic_speech_recognition/code.ipynb
+++ b/examples/automatic_speech_recognition/code.ipynb
@@ -68,11 +68,11 @@
     }
    ],
    "source": [
-    "from audiomate.corpus import assets\n",
+    "from audiomate import annotations\n",
     "from audiomate.utils import textfile\n",
     "\n",
     "hyps = textfile.read_key_value_lines('hyp.txt')\n",
-    "hyps = {k: assets.LabelList(idx='word-transcript', labels=[assets.Label(v)]) for k, v in hyps.items()}\n",
+    "hyps = {k: annotations.LabelList(idx='word-transcript', labels=[annotations.Label(v)]) for k, v in hyps.items()}\n",
     "\n",
     "for utt_idx, ll in hyps.items():\n",
     "    print('{} - {}'.format(utt_idx, ll[0].value))"
@@ -88,6 +88,44 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import evalmate\n",
+    "\n",
+    "result = evalmate.ASREvaluator().evaluate(ref_corpus, hyps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall\n",
+      "###########################################################################################################\n",
+      "\n",
+      "Error Rate :          21.739 %\n",
+      "\n",
+      "N (total):                23\n",
+      "C (correct):              19\n",
+      "S (substitutions):         2\n",
+      "D (deletions):             2\n",
+      "I (insertions):            1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.get_report(template='asr'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -99,7 +137,7 @@
       "Overall\n",
       "###########################################################################################################\n",
       "\n",
-      "Error Rate :           21.74 %\n",
+      "Error Rate :          21.739 %\n",
       "\n",
       "N (total):                23\n",
       "C (correct):              19\n",
@@ -112,25 +150,25 @@
       "###########################################################################################################\n",
       "\n",
       "\n",
-      "about            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "below            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "boss             N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "bottom           N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "evalmate         N:   1.00, C:   0.00, S:   1.00, D:   0.00, I:   0.00\n",
-      "evaluate         N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "from             N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "how              N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "is               N:   3.00, C:   3.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "one              N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "store            N:   1.00, C:   0.00, S:   0.00, D:   1.00, I:   0.00\n",
-      "take             N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "that             N:   1.00, C:   0.00, S:   1.00, D:   0.00, I:   0.00\n",
-      "the              N:   4.00, C:   4.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "this             N:   1.00, C:   0.00, S:   0.00, D:   1.00, I:   0.00\n",
-      "top              N:   2.00, C:   2.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "up               N:   0.00, C:   0.00, S:   0.00, D:   0.00, I:   1.00\n",
-      "whats            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
-      "where            N:   1.00, C:   1.00, S:   0.00, D:   0.00, I:   0.00\n",
+      "about            N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "below            N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "boss             N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "bottom           N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "evalmate         N:         1,  C:         0,  S:         1,  D:         0,  I:         0\n",
+      "evaluate         N:         0,  C:         0,  S:         0,  D:         0,  I:         0\n",
+      "from             N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "how              N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "is               N:         3,  C:         3,  S:         0,  D:         0,  I:         0\n",
+      "one              N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "store            N:         1,  C:         0,  S:         0,  D:         1,  I:         0\n",
+      "take             N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "that             N:         1,  C:         0,  S:         1,  D:         0,  I:         0\n",
+      "the              N:         4,  C:         4,  S:         0,  D:         0,  I:         0\n",
+      "this             N:         1,  C:         0,  S:         0,  D:         1,  I:         0\n",
+      "top              N:         2,  C:         2,  S:         0,  D:         0,  I:         0\n",
+      "up               N:         0,  C:         0,  S:         0,  D:         0,  I:         1\n",
+      "whats            N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
+      "where            N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
       "\n",
       "Utterances\n",
       "###########################################################################################################\n",
@@ -164,10 +202,6 @@
     }
    ],
    "source": [
-    "import evalmate\n",
-    "\n",
-    "result = evalmate.ASREvaluator().evaluate(ref_corpus, hyps)\n",
-    "\n",
     "print(result.get_report(template='asr_detail'))"
    ]
   },
@@ -180,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
