Update KWS report template

--- a/examples/keyword_spotting/code.ipynb
+++ b/examples/keyword_spotting/code.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -136,20 +136,20 @@
       "###########################################################################################################\n",
       "\n",
       "\n",
-      "five             Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.007\n",
-      "                 N:      3,  C:      2,  S:      0,  D:      1,  I:      1\n",
+      "five             Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.007 TWV:  -6.117\n",
+      "                 N:                3,  C:      2,  S:      0,  D:      1,  I:      1\n",
       "\n",
-      "four             Precision: 50.00 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.020\n",
-      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "four             Precision:  50.00 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.020 TWV: -19.740\n",
+      "                 N:                4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n",
-      "one              Precision: 100.00 %   Recall: 71.43 %   FRR: 0.286   FAR: 0.000\n",
-      "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      0\n",
+      "one              Precision: 100.00 %   Recall:  71.43 %   FRR: 0.286   FAR: 0.000 TWV:   0.714\n",
+      "                 N:                7,  C:      5,  S:      1,  D:      1,  I:      0\n",
       "\n",
-      "three            Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.014\n",
-      "                 N:      6,  C:      4,  S:      1,  D:      1,  I:      1\n",
+      "three            Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.014 TWV: -13.182\n",
+      "                 N:                6,  C:      4,  S:      1,  D:      1,  I:      1\n",
       "\n",
-      "two              Precision: 42.86 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.027\n",
-      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "two              Precision:  42.86 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.027 TWV: -26.570\n",
+      "                 N:                4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n"
      ]
     }
@@ -191,19 +191,19 @@
       "###########################################################################################################\n",
       "\n",
       "\n",
-      "five             Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.007\n",
+      "five             Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.007 TWV: -6.117\n",
       "                 N:      3,  C:      2,  S:      0,  D:      1,  I:      1\n",
       "\n",
-      "four             Precision: 50.00 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.020\n",
+      "four             Precision: 50.00 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.020 TWV: -19.740\n",
       "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n",
-      "one              Precision: 100.00 %   Recall: 71.43 %   FRR: 0.286   FAR: 0.000\n",
+      "one              Precision: 100.00 %   Recall: 71.43 %   FRR: 0.286   FAR: 0.000 TWV: 0.714\n",
       "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      0\n",
       "\n",
-      "three            Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.014\n",
+      "three            Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.014 TWV: -13.182\n",
       "                 N:      6,  C:      4,  S:      1,  D:      1,  I:      1\n",
       "\n",
-      "two              Precision: 42.86 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.027\n",
+      "two              Precision: 42.86 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.027 TWV: -26.570\n",
       "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n",
       "\n",
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
