--- a/examples/keyword_spotting/code.ipynb
+++ b/examples/keyword_spotting/code.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,20 +136,20 @@
       "###########################################################################################################\n",
       "\n",
       "\n",
-      "five             Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.007 TWV:  -6.117\n",
-      "                 N:                3,  C:      2,  S:      0,  D:      1,  I:      1\n",
+      "five             Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.007   TWV:  -6.117\n",
+      "                 N:      3,  C:      2,  S:      0,  D:      1,  I:      1\n",
       "\n",
-      "four             Precision:  50.00 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.020 TWV: -19.740\n",
-      "                 N:                4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "four             Precision:  50.00 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.020   TWV: -19.740\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n",
-      "one              Precision: 100.00 %   Recall:  71.43 %   FRR: 0.286   FAR: 0.000 TWV:   0.714\n",
-      "                 N:                7,  C:      5,  S:      1,  D:      1,  I:      0\n",
+      "one              Precision: 100.00 %   Recall:  71.43 %   FRR: 0.286   FAR: 0.000   TWV:   0.714\n",
+      "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      0\n",
       "\n",
-      "three            Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.014 TWV: -13.182\n",
-      "                 N:                6,  C:      4,  S:      1,  D:      1,  I:      1\n",
+      "three            Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.014   TWV: -13.182\n",
+      "                 N:      6,  C:      4,  S:      1,  D:      1,  I:      1\n",
       "\n",
-      "two              Precision:  42.86 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.027 TWV: -26.570\n",
-      "                 N:                4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "two              Precision:  42.86 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.027   TWV: -26.570\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n"
      ]
     }
@@ -161,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -191,19 +193,19 @@
       "###########################################################################################################\n",
       "\n",
       "\n",
-      "five             Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.007 TWV: -6.117\n",
+      "five             Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.007   TWV:  -6.117\n",
       "                 N:      3,  C:      2,  S:      0,  D:      1,  I:      1\n",
       "\n",
-      "four             Precision: 50.00 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.020 TWV: -19.740\n",
+      "four             Precision:  50.00 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.020   TWV: -19.740\n",
       "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n",
-      "one              Precision: 100.00 %   Recall: 71.43 %   FRR: 0.286   FAR: 0.000 TWV: 0.714\n",
+      "one              Precision: 100.00 %   Recall:  71.43 %   FRR: 0.286   FAR: 0.000   TWV:   0.714\n",
       "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      0\n",
       "\n",
-      "three            Precision: 66.67 %   Recall: 66.67 %   FRR: 0.333   FAR: 0.014 TWV: -13.182\n",
+      "three            Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.014   TWV: -13.182\n",
       "                 N:      6,  C:      4,  S:      1,  D:      1,  I:      1\n",
       "\n",
-      "two              Precision: 42.86 %   Recall: 75.00 %   FRR: 0.250   FAR: 0.027 TWV: -26.570\n",
+      "two              Precision:  42.86 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.027   TWV: -26.570\n",
       "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
       "\n",
       "\n",
@@ -236,6 +238,89 @@
    ],
    "source": [
     "print(result.get_report('kws_detail'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some templates also take parameters. These are passed in the `get_report` method.\n",
+    "This way the template can be customized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall\n",
+      "###########################################################################################################\n",
+      "\n",
+      "TWV:                  -12.979\n",
+      "\n",
+      "FRR:                    0.290\n",
+      "FAR:                    0.014\n",
+      "\n",
+      "Precision:             62.963 %\n",
+      "Recall:                70.833 %\n",
+      "\n",
+      "Precision (mean):      65.238 %\n",
+      "Recall (mean):         70.952 %\n",
+      "\n",
+      "N (total):                 24\n",
+      "C (correct):               17\n",
+      "S (substitutions):          4\n",
+      "D (deletions):              3\n",
+      "I (insertions):             6\n",
+      "\n",
+      "Keywords\n",
+      "###########################################################################################################\n",
+      "\n",
+      "\n",
+      "five             Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.007   TWV:  -6.117\n",
+      "                 N:      3,  C:      2,  S:      0,  D:      1,  I:      1\n",
+      "\n",
+      "four             Precision:  50.00 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.020   TWV: -19.740\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "\n",
+      "one              Precision: 100.00 %   Recall:  71.43 %   FRR: 0.286   FAR: 0.000   TWV:   0.714\n",
+      "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      0\n",
+      "\n",
+      "three            Precision:  66.67 %   Recall:  66.67 %   FRR: 0.333   FAR: 0.014   TWV: -13.182\n",
+      "                 N:      6,  C:      4,  S:      1,  D:      1,  I:      1\n",
+      "\n",
+      "two              Precision:  42.86 %   Recall:  75.00 %   FRR: 0.250   FAR: 0.027   TWV: -26.570\n",
+      "                 N:      4,  C:      3,  S:      1,  D:      0,  I:      2\n",
+      "\n",
+      "Keyword Groups\n",
+      "###########################################################################################################\n",
+      "\n",
+      "\n",
+      "\n",
+      "cat_a            Precision:  66.67 %   Recall:  70.59 %   FRR: 0.290   FAR: 0.014   TWV: -13.013\n",
+      "                 N:     17,  C:     12,  S:      3,  D:      2,  I:      3\n",
+      "\n",
+      "\n",
+      "cat_b            Precision:  55.56 %   Recall:  71.43 %   FRR: 0.292   FAR: 0.014   TWV: -12.928\n",
+      "                 N:      7,  C:      5,  S:      1,  D:      1,  I:      3\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.get_report('kws', template_param={\n",
+    "    'keyword_groups': {\n",
+    "        'cat_a': ['one', 'two', 'three'],\n",
+    "        'cat_b': ['four', 'five']\n",
+    "    }\n",
+    "}))"
    ]
   }
  ],
