Fix problems due to intervaltree

--- a/examples/automatic_speech_recognition/code.ipynb
+++ b/examples/automatic_speech_recognition/code.ipynb
@@ -38,8 +38,8 @@
     "ref_corpus = audiomate.Corpus.load('ref_corpus')\n",
     "\n",
     "for utt in ref_corpus.utterances.values():\n",
-    "    label = utt.label_lists['word-transcript'][0]\n",
-    "    print('{} - {}'.format(utt.idx, label.value))"
+    "    label_value = utt.label_lists['word-transcript'].join()\n",
+    "    print('{} - {}'.format(utt.idx, label_value))"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "hyps = {k: annotations.LabelList(idx='word-transcript', labels=[annotations.Label(v)]) for k, v in hyps.items()}\n",
     "\n",
     "for utt_idx, ll in hyps.items():\n",
-    "    print('{} - {}'.format(utt_idx, ll[0].value))"
+    "    print('{} - {}'.format(utt_idx, ll.join()))"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
