Split failing/correct utterances in report

--- a/examples/automatic_speech_recognition/code.ipynb
+++ b/examples/automatic_speech_recognition/code.ipynb
@@ -170,7 +170,7 @@
       "whats            N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
       "where            N:         1,  C:         1,  S:         0,  D:         0,  I:         0\n",
       "\n",
-      "Utterances\n",
+      "Failing Utterances\n",
       "###########################################################################################################\n",
       "\n",
       "\n",
@@ -193,6 +193,11 @@
       "003-b :\n",
       "    take    - the one from the top \n",
       "    take   up the one from the top \n",
+      "\n",
+      "\n",
+      "Correct Utterances\n",
+      "###########################################################################################################\n",
+      "\n",
       "\n",
       "003-c :\n",
       "    bottom is below top \n",
